# r2_algorithm

./: .gitignore
image/: cam_in_ex.txt
src/jie_3d_nav/jie_octomap/config/: slam_control_command.yaml
src/jie_3d_nav/jie_octomap/scripts/: save_bin_map_gui.py
src/jie_3d_nav/octo_planner/src/: d1_controller.cpp
src/odin_ros_driver/config/: control_command.yaml
src/r2_bt_bringup/: package.xml  setup.cfg  setup.py
src/r2_bt_bringup/launch/: r2_task_mock_bringup.launch.py  r2_task_real_bringup.launch.py  run_bt.launch.py  test_basic.launch.py  test_chassis_step_command.launch.py  test_execute_arm_action.launch.py  test_get_head.launch.py  test_groot2.launch.py  test_lift_control.launch.py  test_navigate_to_pose.launch.py  test_set_end_effector.launch.py
src/r2_bt_executor/: CMakeLists.txt  package.xml
src/r2_bt_executor/config/: meilin_map.yaml  meilin_nav_goals.yaml  meilin_zone2_task_before_real_nav.xml  meilin_zone2_task_v2_before_route_yaml.xml  test_arm_action_config_from_yaml.xml  test_basic.xml  test_blackboard_update_nodes.xml  test_chassis_cmd_type_from_yaml.xml  test_chassis_step_command.xml  test_execute_arm_action.xml  test_get_block_height_from_yaml.xml  test_get_head.xml  test_groot2.xml  test_kfs_from_yaml.xml  test_kfs_pick_action_id_from_yaml.xml  test_lift_control.xml  test_meilin_auto_route_three_steps.xml  test_meilin_kfs_logic.xml  test_meilin_kfs_skip.xml  test_meilin_logic.xml  test_meilin_logic_2.xml  test_meilin_one_step_with_kfs_pick_transfer_yaml.xml  test_meilin_one_step_with_kfs_yaml.xml  test_meilin_repeat_route_until_done.xml  test_meilin_repeat_route_until_done_with_kfs_yaml.xml  test_meilin_repeat_route_until_done_yaml_height.xml  test_meilin_route_guard_subtree.xml  test_meilin_route_height_cmd.xml  test_meilin_route_pick.xml  test_meilin_route_transition_cmd.xml  test_meilin_single_step_update_state.xml  test_meilin_single_step_with_mock_chassis.xml  test_meilin_three_steps_mock_chassis.xml  test_meilin_three_steps_subtree_mock_chassis.xml  test_meilin_transition_info.xml  test_meilin_transition_odin_mock_cmd.xml  test_meilin_two_steps_mock_chassis.xml  test_navigate_to_pose.xml  test_odin_mock_nodes.xml  test_odin_pose_pid_action.xml  (+4 more)
src/r2_bt_executor/src/: bt_executor_node.cpp
src/r2_bt_nodes/: CMakeLists.txt  package.xml
src/r2_bt_nodes/include/r2_bt_nodes/: arm_nodes.hpp  basic_nodes.hpp  blackboard_nodes.hpp  chassis_nodes.hpp  meilin_logic_nodes.hpp  nav_nodes.hpp  odin_mock_nodes.hpp  odin_nodes.hpp
src/r2_bt_nodes/src/: arm_nodes.cpp  basic_nodes.cpp  blackboard_nodes.cpp  chassis_nodes.cpp  meilin_logic_nodes.cpp  nav_nodes.cpp  odin_mock_nodes.cpp  odin_nodes.cpp
src/r2_nav_bringup/config/: r2_nav_goals.yaml  r2_nav_params.yaml
src/r2_nav_bringup/launch/: r2_odin_web_nav.launch.py
src/r2_odin_interfaces/: CMakeLists.txt  package.xml
src/r2_odin_interfaces/action/: OdinPosePidAlign.action
src/r2_odin_pose_pid/: package.xml  setup.cfg  setup.py
src/r2_odin_pose_pid/r2_odin_pose_pid/: odin_pose_pid_mock_server.py
src/techx_r2_arm_control/: package.xml  setup.cfg  setup.py
src/techx_r2_arm_control/config/: arm_serial.yaml  mock_arm_serial.yaml
src/techx_r2_arm_control/launch/: arm_serial.launch.py  mock_take_head.launch.py
src/techx_r2_arm_control/techx_r2_arm_control/: arm_serial_node.py  mock_arm_stm32.py  protocol.py  protocol_demo.py  test_execute_action_client.py  test_get_head_client.py  test_set_end_effector_client.py
src/techx_r2_arm_interfaces/: CMakeLists.txt  package.xml
src/techx_r2_arm_interfaces/action/: ExecuteAction.action  GetHead.action  SetEndEffector.action
src/techx_r2_chassis_control/config/: chassis_serial.yaml  mock_chassis_serial.yaml
src/techx_r2_chassis_control/launch/: mock_chassis.launch.py
src/techx_r2_chassis_control/techx_r2_chassis_control/: chassis_serial_node.py  mock_chassis_stm32.py
